# local-ado

./: .env.example  .markdownlint.jsonc  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  renovate.yml
fixtures/: demo.json
src/azure_api_mock/: __main__.py  app.py  http_utils.py  settings.py  store.py
tests/: test_auth.py  test_mvp_endpoints.py
